--- a/uwsgi.ini
+++ b/uwsgi.ini
@@ -1,6 +1,10 @@
 [uwsgi]
-module = main
-callable = app
-master = true
+module=wsgi:app
+socket=127.0.0.1:5000
+protocol=http
+post-buffering=8192
+workers=3
+plugin=python
+master=True
 touch-reload = /app/uwsgi.ini
 
