--- a/uwsgi.ini
+++ b/uwsgi.ini
@@ -3,8 +3,8 @@ module=wsgi:app
 socket=127.0.0.1:5000
 protocol=http
 post-buffering=8192
-workers=3
-plugin=python
+workers=2
+plugins=python3 
 master=True
 touch-reload = /app/uwsgi.ini
 
