Add confingurates to connect to nginx

--- a/uwsgi.ini
+++ b/uwsgi.ini
@@ -1,10 +1,16 @@
 [uwsgi]
 module=wsgi:app
-socket=127.0.0.1:5000
+# socket=0.0.0.0:8080; use local ip
 protocol=http
 post-buffering=8192
 workers=2
-plugins=python3 
+plugins=python
 master=True
-touch-reload = /app/uwsgi.ini
+touch-reload = uwsgi.ini
+
+# nginx config
+socket = myapp.sock
+chmod-socket = 664
+vacuum = true
+die-on-term = true
 
