--- a/uwsgi.ini
+++ b/uwsgi.ini
@@ -1,10 +1,14 @@
 [uwsgi]
 module=wsgi:app
-socket=127.0.0.1:5000
-protocol=http
 post-buffering=8192
 workers=3
 plugin=python
 master=True
 touch-reload = /app/uwsgi.ini
+
+# nginx
+socket = myapp.sock
+chmod-socket = 664
+vacuum = true
+die-on-term = true
 
