Reformat code structure

--- a/uwsgi.ini
+++ b/uwsgi.ini
@@ -5,10 +5,11 @@ workers=3
 plugin=python
 master=True
 touch-reload = /app/uwsgi.ini
+socket=127.0.0.1:5001
+protocol=http
 
 # nginx
-socket = myapp.sock
-chmod-socket = 664
-vacuum = true
-die-on-term = true
-
+# socket = myapp.sock
+# chmod-socket = 664
+# vacuum = true
+# die-on-term = true
