Fix include translating modules by offing them

--- a/uwsgi.ini
+++ b/uwsgi.ini
@@ -1,8 +1,8 @@
 [uwsgi]
 module=wsgi:app
-post-buffering=8192
-workers=3
-plugin=python
+# post-buffering=8192
+# workers=3
+plugin=python3
 master=True
 touch-reload = /app/uwsgi.ini
 socket=127.0.0.1:5001
