--- a/uwsgi.ini
+++ b/uwsgi.ini
@@ -1,15 +1,8 @@
 [uwsgi]
-module=wsgi:app
-# post-buffering=8192
-# workers=3
-plugin=python3
-master=True
-touch-reload = /app/uwsgi.ini
-socket=127.0.0.1:5001
-protocol=http
+module = wsgi:app
+http-socket = localhost:5000
+plugins = python3
+buffer-size = 32768
 
-# nginx
-# socket = myapp.sock
-# chmod-socket = 664
-# vacuum = true
-# die-on-term = true
+master = true
+processes = 2
