Edir run configuration

--- a/nginx.conf
+++ b/nginx.conf
@@ -7,9 +7,13 @@ http {
     include mime.types;
     server {
         listen 80;
+        listen 443 ssl;
+
+        ssl_certificate /etc/nginx/ssl/certificate.crt;
+        ssl_certificate_key /etc/nginx/ssl/private.key;
         server_name 0.0.0.0;
         root /sites/lavaland;
-
+        
         location / {
             proxy_pass 'http://localhost:5000/';
         }
