Edit run configuration

--- a/nginx.conf
+++ b/nginx.conf
@@ -8,10 +8,14 @@ http {
     server {
         listen 80;
         listen 443 ssl;
+        server_name lava-land.ru www.lava-land.ru; 
+
+        if ($scheme = 'http') {
+            return 301 https://$host$request_uri;
+        }
 
         ssl_certificate /etc/nginx/ssl/certificate.crt;
         ssl_certificate_key /etc/nginx/ssl/private.key;
-        server_name 0.0.0.0;
         root /sites/lavaland;
         
         location / {
