--- a/uwsgi.ini
+++ b/uwsgi.ini
@@ -1,4 +1,5 @@
 [uwsgi]
+chdir = /sites/lavaland/
 module = wsgi:app
 http-socket = localhost:5000
 plugins = python3
@@ -6,3 +7,6 @@ buffer-size = 32768
 
 master = true
 processes = 2
+
+die-on-term = true
+
