Edit file size limit

--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -17,6 +17,7 @@ http {
         ssl_certificate /etc/nginx/ssl/certificate.crt;
         ssl_certificate_key /etc/nginx/ssl/private.key;
         root /sites/lavaland;
+        client_max_body_size 10000M;
         
         location / {
             proxy_pass 'http://localhost:5000/';
