--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -1,5 +1,22 @@
 worker_processes auto;
 
+worker_connections 64;
+
+access_log off;
+# to boost I/O on HDD we can disable access logs
+# this prevent nginx from logging every action in a log file named `access.log`.
+
+keepalive_timeout 15;
+# default is 65;
+# server will close connection after this time (in seconds)
+
+gzip_vary on;
+gzip_proxied any;
+gzip_comp_level 2;
+gzip_buffers 16 8k;
+gzip_http_version 1.1;
+gzip_min_length 256;
+
 events {
 }
 
