--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -17,6 +17,8 @@ gzip_buffers 16 8k;
 gzip_http_version 1.1;
 gzip_min_length 256;
 
+proxy_cache_path /data/nginx/ramcache keys_zone=my_zone:10m inactive=1d;
+
 events {
 }
 
@@ -35,9 +37,24 @@ http {
         ssl_certificate_key /etc/nginx/ssl/private.key;
         root /sites/lavaland;
         client_max_body_size 10000M;
-        
+      =
         location / {
+            proxy_cache my_zone;
+            proxy_cache_key "$host$request_uri$http_authorization";
+            proxy_cache_valid 404 302 1m;
+            proxy_cache_valid 200 1d;
+            add_header X-Cache-Status $upstream_cache_status;
+
             proxy_pass 'http://localhost:5000/';
+        }
+        location /cloud/ {
+            proxy_pass 'http://localhost:5000/cloud/';
+        }
+        location /messenger/ {
+            proxy_pass 'http://localhost:5000/messenger/';
+        }
+        location /account/ {
+            proxy_pass 'http://localhost:5000/account/';
         }
     }
 }
