--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -16,7 +16,6 @@ http {
         ssl_certificate_key /etc/nginx/ssl/private.key;
         root /sites/lavaland;
 
-
         access_log off;
 
         gzip_vary on;
@@ -25,6 +24,7 @@ http {
         gzip_buffers 16 8k;
         gzip_http_version 1.1;
         gzip_min_length 256;
+        gzip_types text/plain text/css application/json application/x-javascript text/xml application/xml application/xml+rss text/javascript;
 
 
         client_max_body_size 10000M;
