--- a/nginx/lavaland.service
+++ b/nginx/lavaland.service
@@ -4,7 +4,7 @@ After=syslog.target
 
 [Service]
 WorkingDirectory=/sites/lavaland/waitress
-ExecStart=/usr/bin/bash run.sh
+ExecStart=/usr/bin/python3 wsgi.py
 Restart=always
 KillSignal=SIGQUIT
 Type=simple
