--- a/nginx/lavaland.service
+++ b/nginx/lavaland.service
@@ -5,9 +5,8 @@ After=network.target
 [Service]
 User=lawrence
 Group=www-data
-Environment="PATH=/sites/lavaland/venv/bin"
 WorkingDirectory=/sites/lavaland/python
-ExecStart=/sites/lavaland/venv/bin/gunicorn --workers 3 --bind 0.0.0.0:5000 -m 007 wsgi:app
+ExecStart=/home/lawrence/.local/bin/gunicorn --workers 3 --bind 0.0.0.0:5000 -m 007 wsgi:app
 Restart=always
 KillSignal=SIGQUIT
 Type=simple
