from http to unix

--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -30,7 +30,8 @@ http {
         client_max_body_size 10000M;
 
         location / {
-            proxy_pass 'http://localhost:5000/';
+            include proxy_params;
+            proxy_pass http://unix:/sites/lavaland/python/lavaland.sock;
         }
     }
 }
