--- a/nginx/lavaland.service
+++ b/nginx/lavaland.service
@@ -7,7 +7,7 @@ User=lawrence
 Group=www-data
 Environment="PATH=/sites/lavaland/venv/bin"
 WorkingDirectory=/sites/lavaland/python
-ExecStart=/sites/lavaland/venv/bin/gunicorn --workers 3 --bind 0.0.0.0:5000 -m 007 wsgi:app
+ExecStart=/sites/lavaland/venv/bin/gunicorn --workers 3 --bind unix:lavaland.sock -m 007 wsgi:app
 Restart=always
 KillSignal=SIGQUIT
 Type=simple
