Edit error pages and max file limit to 16GB

--- a/nginx/lavaland.service
+++ b/nginx/lavaland.service
@@ -6,7 +6,7 @@ After=network.target
 User=lawrence
 Group=www-data
 WorkingDirectory=/sites/lavaland/python
-ExecStart=/home/lawrence/.local/bin/gunicorn --workers 3 --bind unix:lavaland.sock -m 777 wsgi:app
+ExecStart="/home/lawrence/.local/bin/gunicorn --workers 3 --bind unix:lavaland.sock -m 777 --limit-request-field_size 17179869184 wsgi:app"
 Restart=always
 KillSignal=SIGQUIT
 Type=simple
