--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -27,7 +27,7 @@ http {
         gzip_types text/plain text/css application/json application/x-javascript text/xml application/xml application/xml+rss text/javascript;
 
 
-        client_max_body_size 10000M;
+        client_max_body_size 17179869184;
 
         location / {
             include proxy_params;
