--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -34,5 +34,30 @@ http {
             proxy_pass http://unix:/sites/lavaland/python/lavaland.sock;
         }
     }
+    server {
+        listen 80;
+        listen 443 ssl;
+        server_name test.lava-land.ru;
+
+        root /sites/lavaland;
+
+        access_log off;
+
+        gzip_vary on;
+        gzip_proxied any;
+        gzip_comp_level 2;
+        gzip_buffers 16 8k;
+        gzip_http_version 1.1;
+        gzip_min_length 256;
+        gzip_types text/plain text/css application/json application/x-javascript text/xml application/xml application/xml+rss text/javascript;
+
+
+        client_max_body_size 17179869184;
+
+        location / {
+            include proxy_params;
+            proxy_pass http://unix:/sites/lavaland/python/lavaland.sock;
+        }
+    }
 }
 
